minimal preview working

--- a/Clutter/Base.lproj/MainMenu.xib
+++ b/Clutter/Base.lproj/MainMenu.xib
@@ -6,18 +6,12 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
             <connections>
-                <outlet property="delegate" destination="Voe-Tx-rLC" id="GzC-gU-4Uq"/>
+                <outlet property="delegate" destination="Voe-Tx-rLC" id="VC9-CC-QHB"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
-            <connections>
-                <outlet property="snaggie" destination="9LE-sJ-ag3" id="kzV-B2-as5"/>
-                <outlet property="tableView" destination="lV4-Ag-dY6" id="HQH-06-rq9"/>
-                <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
-            </connections>
-        </customObject>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
@@ -668,180 +662,5 @@
                 </menuItem>
             </items>
         </menu>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
-            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="374"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
-            <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="374"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <scrollView appearanceType="aqua" autohidesScrollers="YES" horizontalLineScroll="45" horizontalPageScroll="10" verticalLineScroll="45" verticalPageScroll="10" usesPredominantAxisScrolling="NO" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="5QP-FN-6vh">
-                        <rect key="frame" x="20" y="90" width="440" height="264"/>
-                        <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="ekC-D5-bIy">
-                            <rect key="frame" x="1" y="1" width="438" height="262"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" autosaveColumns="NO" rowHeight="43" rowSizeStyle="automatic" viewBased="YES" id="lV4-Ag-dY6">
-                                    <rect key="frame" x="0.0" y="0.0" width="438" height="0.0"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <size key="intercellSpacing" width="3" height="2"/>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
-                                    <color key="gridColor" red="0.25475457699999998" green="0.25475457699999998" blue="0.25475457699999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    <tableColumns>
-                                        <tableColumn identifier="Check" width="49.79296875" minWidth="10" maxWidth="3.4028234663852886e+38" id="ByO-Vo-sY7">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
-                                                <font key="font" metaFont="smallSystem"/>
-                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                            </tableHeaderCell>
-                                            <buttonCell key="dataCell" type="check" bezelStyle="regularSquare" imagePosition="overlaps" alignment="center" inset="2" id="BRy-Ap-KOT">
-                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                <font key="font" metaFont="system"/>
-                                            </buttonCell>
-                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
-                                            <prototypeCellViews>
-                                                <button identifier="CheckView" id="wri-rd-7rL">
-                                                    <rect key="frame" x="1" y="1" width="50" height="40"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="overlaps" alignment="center" state="on" inset="2" id="tpN-JH-q2l">
-                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                        <font key="font" metaFont="system"/>
-                                                    </buttonCell>
-                                                </button>
-                                            </prototypeCellViews>
-                                        </tableColumn>
-                                        <tableColumn identifier="Name" width="238.671875" minWidth="40" maxWidth="1000" id="bj7-tH-GFQ">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
-                                                <font key="font" metaFont="smallSystem"/>
-                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
-                                            </tableHeaderCell>
-                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="A1v-oe-8De">
-                                                <font key="font" metaFont="system"/>
-                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
-                                            <prototypeCellViews>
-                                                <tableCellView identifier="NameView" id="6rE-h6-IDm">
-                                                    <rect key="frame" x="54" y="1" width="239" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NNs-d8-Tns">
-                                                            <rect key="frame" x="0.0" y="10" width="239" height="27"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="SHN-2E-a1z">
-                                                                <font key="font" size="18" name="Seravek-ExtraLight"/>
-                                                                <color key="textColor" red="0.51372549019607838" green="0.52156862745098043" blue="0.52941176470588236" alpha="1" colorSpace="deviceRGB"/>
-                                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            </textFieldCell>
-                                                        </textField>
-                                                    </subviews>
-                                                    <connections>
-                                                        <outlet property="textField" destination="NNs-d8-Tns" id="ag2-gu-chw"/>
-                                                    </connections>
-                                                </tableCellView>
-                                            </prototypeCellViews>
-                                        </tableColumn>
-                                        <tableColumn identifier="Slider" width="140" minWidth="115" maxWidth="1000000" id="vkr-jf-GhD">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
-                                                <font key="font" metaFont="smallSystem"/>
-                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                            </tableHeaderCell>
-                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="4tT-a7-uSZ">
-                                                <font key="font" metaFont="system"/>
-                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                            <prototypeCellViews>
-                                                <tableCellView identifier="SliderView" id="AsD-vg-2lW">
-                                                    <rect key="frame" x="296" y="1" width="140" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JcL-av-eQq">
-                                                            <rect key="frame" x="36" y="11" width="89" height="21"/>
-                                                            <sliderCell key="cell" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="above" sliderType="linear" id="O7W-vh-rgG"/>
-                                                        </slider>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jjZ-Tg-753">
-                                                            <rect key="frame" x="13" y="14" width="46" height="17"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="1d" placeholderString="1d" id="JD7-Ye-uyb">
-                                                                <font key="font" metaFont="system"/>
-                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                            </textFieldCell>
-                                                        </textField>
-                                                    </subviews>
-                                                    <connections>
-                                                        <outlet property="textField" destination="jjZ-Tg-753" id="Vku-SQ-5gM"/>
-                                                    </connections>
-                                                </tableCellView>
-                                            </prototypeCellViews>
-                                        </tableColumn>
-                                    </tableColumns>
-                                    <connections>
-                                        <outlet property="dataSource" destination="Voe-Tx-rLC" id="uum-AL-MAo"/>
-                                        <outlet property="delegate" destination="Voe-Tx-rLC" id="wXH-pa-cfl"/>
-                                    </connections>
-                                </tableView>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
-                        </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="zuB-Np-tzd">
-                            <rect key="frame" x="0.0" y="248" width="440" height="16"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="aKj-uc-7PJ">
-                            <rect key="frame" x="224" y="17" width="15" height="102"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                    </scrollView>
-                    <customView identifier="Snaggie" appearanceType="aqua" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9LE-sJ-ag3" customClass="CLResizeView">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="size" keyPath="handleSize">
-                                <size key="value" width="50" height="1"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="tween">
-                                <integer key="value" value="3"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="handleTween">
-                                <integer key="value" value="3"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </customView>
-                    <button ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7rD-nu-Ppp">
-                        <rect key="frame" x="313" y="33" width="151" height="50"/>
-                        <buttonCell key="cell" type="bevel" title="Keep" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="QNn-jT-jCl">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                    </button>
-                    <segmentedControl verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TzE-PX-1bJ">
-                        <rect key="frame" x="18" y="46" width="71" height="24"/>
-                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="4PN-1q-w99">
-                            <font key="font" metaFont="system"/>
-                            <segments>
-                                <segment label="1d" width="32"/>
-                                <segment label="∞" width="32" selected="YES" tag="1"/>
-                            </segments>
-                        </segmentedCell>
-                    </segmentedControl>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="9LE-sJ-ag3" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="9ki-fv-198"/>
-                    <constraint firstAttribute="trailing" secondItem="5QP-FN-6vh" secondAttribute="trailing" constant="20" symbolic="YES" id="9mO-r8-jyz"/>
-                    <constraint firstItem="5QP-FN-6vh" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="BcW-ej-Wsh"/>
-                    <constraint firstItem="5QP-FN-6vh" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="QK6-SN-OFP"/>
-                    <constraint firstItem="7rD-nu-Ppp" firstAttribute="top" secondItem="5QP-FN-6vh" secondAttribute="bottom" constant="12" id="agP-D9-C4l"/>
-                    <constraint firstAttribute="trailing" secondItem="9LE-sJ-ag3" secondAttribute="trailing" id="dmj-Um-pz5"/>
-                    <constraint firstItem="9LE-sJ-ag3" firstAttribute="top" secondItem="5QP-FN-6vh" secondAttribute="bottom" constant="66" id="oZb-3U-dPO"/>
-                    <constraint firstAttribute="bottom" secondItem="5QP-FN-6vh" secondAttribute="bottom" constant="90" id="pDz-7R-vqW"/>
-                    <constraint firstAttribute="bottom" secondItem="9LE-sJ-ag3" secondAttribute="bottom" id="xgS-5Z-EcL"/>
-                    <constraint firstItem="9LE-sJ-ag3" firstAttribute="top" secondItem="7rD-nu-Ppp" secondAttribute="bottom" constant="8" id="yeX-e5-PMO"/>
-                </constraints>
-            </view>
-        </window>
     </objects>
 </document>
