--- a/Clutter/Window.xib
+++ b/Clutter/Window.xib
@@ -15,16 +15,16 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" texturedBackground="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="405"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
-            <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="3" width="480" height="405"/>
+            <rect key="contentRect" x="196" y="240" width="480" height="364"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <view key="contentView" id="EiT-Mj-1SZ" customClass="CLMainView">
+                <rect key="frame" x="0.0" y="2" width="480" height="364"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView identifier="Snaggie" appearanceType="aqua" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xTx-4e-72P" customClass="CLResizeView">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
+                    <customView identifier="Snaggie" hidden="YES" appearanceType="aqua" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xTx-4e-72P" customClass="CLResizeView">
+                        <rect key="frame" x="0.0" y="-41" width="480" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="MdB-u1-KwF"/>
                             <constraint firstAttribute="height" constant="25" id="Pfy-9Y-vsz"/>
@@ -41,8 +41,8 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </customView>
-                    <segmentedControl verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y0g-kF-cim">
-                        <rect key="frame" x="20" y="362" width="164" height="28"/>
+                    <segmentedControl hidden="YES" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y0g-kF-cim">
+                        <rect key="frame" x="20" y="321" width="164" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="dz9-IO-jgr"/>
                         </constraints>
@@ -52,15 +52,10 @@
                                 <segment label="Fresh" width="74"/>
                                 <segment label="Expired" width="87" selected="YES" tag="1"/>
                             </segments>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="color" keyPath="deselectedColor">
-                                    <color key="value" red="0.1529411765" green="0.17254901959999999" blue="0.1960784314" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
                         </segmentedCell>
                     </segmentedControl>
-                    <scrollView appearanceType="aqua" ambiguous="YES" misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="45" horizontalPageScroll="10" verticalLineScroll="45" verticalPageScroll="10" usesPredominantAxisScrolling="NO" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-1h-d97">
-                        <rect key="frame" x="20" y="200" width="440" height="146"/>
+                    <scrollView hidden="YES" appearanceType="aqua" ambiguous="YES" misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="45" horizontalPageScroll="10" verticalLineScroll="45" verticalPageScroll="10" usesPredominantAxisScrolling="NO" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-1h-d97">
+                        <rect key="frame" x="20" y="159" width="440" height="146"/>
                         <clipView key="contentView" ambiguous="YES" misplaced="YES" drawsBackground="NO" copiesOnScroll="NO" id="QAQ-g1-4GS">
                             <rect key="frame" x="1" y="1" width="438" height="262"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -167,7 +162,7 @@
                     <constraint firstAttribute="bottom" secondItem="Noq-1h-d97" secondAttribute="bottom" constant="200" id="yoL-R2-6Om"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="345" y="411.5"/>
+            <point key="canvasLocation" x="345" y="388"/>
         </window>
     </objects>
 </document>
