--- a/Clutter/CLTableView.xib
+++ b/Clutter/CLTableView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9059"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CLTableView"/>
@@ -17,10 +17,9 @@
                         <rect key="frame" x="1" y="0.0" width="511" height="271"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="none" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="30" rowSizeStyle="automatic" headerView="l2Z-Io-4TQ" viewBased="YES" id="1Lq-FP-J9M" customClass="CLTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="511" height="254"/>
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="30" rowSizeStyle="automatic" headerView="l2Z-Io-4TQ" viewBased="YES" id="1Lq-FP-J9M" customClass="CLTableView">
+                                <rect key="frame" x="0.0" y="0.0" width="511" height="248"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <animations/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" red="0.78431372549019607" green="0.79607843137254897" blue="0.81568627450980391" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="gridColor" red="0.6705882352941176" green="0.6705882352941176" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,7 +43,6 @@
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fyd-Kk-xlA">
                                                         <rect key="frame" x="6" y="1" width="192" height="17"/>
-                                                        <animations/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Name" id="CIt-jk-0lS">
                                                             <font key="font" size="14" name="Seravek-Light"/>
                                                             <color key="textColor" red="0.27450980392156865" green="0.29019607843137252" blue="0.30588235294117649" alpha="1" colorSpace="calibratedRGB"/>
@@ -56,7 +54,6 @@
                                                     <constraint firstItem="fyd-Kk-xlA" firstAttribute="leading" secondItem="MEV-20-A3M" secondAttribute="leading" constant="8" id="bjo-5H-kZD"/>
                                                     <constraint firstItem="fyd-Kk-xlA" firstAttribute="centerY" secondItem="MEV-20-A3M" secondAttribute="centerY" id="gdx-8b-akT"/>
                                                 </constraints>
-                                                <animations/>
                                                 <connections>
                                                     <outlet property="textField" destination="fyd-Kk-xlA" id="JOS-Gj-id9"/>
                                                 </connections>
@@ -82,7 +79,6 @@
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pyk-Ox-0b3">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
-                                                        <animations/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Size" id="5vA-mJ-MMR">
                                                             <font key="font" metaFont="system"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -95,7 +91,6 @@
                                                     <constraint firstItem="Pyk-Ox-0b3" firstAttribute="centerX" secondItem="2EV-9m-nPt" secondAttribute="centerX" id="LCk-5R-4Ou"/>
                                                     <constraint firstItem="Pyk-Ox-0b3" firstAttribute="centerY" secondItem="2EV-9m-nPt" secondAttribute="centerY" id="NGN-2R-k09"/>
                                                 </constraints>
-                                                <animations/>
                                                 <connections>
                                                     <outlet property="textField" destination="Pyk-Ox-0b3" id="QWI-mY-93q"/>
                                                 </connections>
@@ -121,7 +116,6 @@
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DG0-DQ-SVZ">
                                                         <rect key="frame" x="0.0" y="3" width="100" height="17"/>
-                                                        <animations/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Time Left" id="gym-4A-F5V">
                                                             <font key="font" metaFont="system"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -134,7 +128,6 @@
                                                     <constraint firstAttribute="bottom" secondItem="DG0-DQ-SVZ" secondAttribute="bottom" constant="3" id="UdS-Vv-yrR"/>
                                                     <constraint firstAttribute="trailing" secondItem="DG0-DQ-SVZ" secondAttribute="trailing" constant="80" id="zUD-UM-1Yn"/>
                                                 </constraints>
-                                                <animations/>
                                                 <connections>
                                                     <outlet property="textField" destination="DG0-DQ-SVZ" id="JPh-VA-kGJ"/>
                                                 </connections>
@@ -144,24 +137,19 @@
                                 </tableColumns>
                             </tableView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
-                    <animations/>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="a8E-kx-UD5">
                         <rect key="frame" x="1" y="256" width="481" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="yEf-2N-xpy">
                         <rect key="frame" x="224" y="17" width="15" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                     <tableHeaderView key="headerView" id="l2Z-Io-4TQ">
-                        <rect key="frame" x="0.0" y="0.0" width="511" height="17"/>
+                        <rect key="frame" x="0.0" y="0.0" width="511" height="23"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </tableHeaderView>
                 </scrollView>
             </subviews>
@@ -172,7 +160,6 @@
                 <constraint firstAttribute="trailing" secondItem="ACZ-sz-DVF" secondAttribute="trailing" id="roP-wm-mvu"/>
                 <constraint firstAttribute="bottom" secondItem="ACZ-sz-DVF" secondAttribute="bottom" id="wlL-iD-ZX1"/>
             </constraints>
-            <animations/>
             <connections>
                 <outlet property="tableView" destination="1Lq-FP-J9M" id="mxs-ey-r8j"/>
             </connections>
