finish tabbed interface overhaul

--- a/Clutter/CLTableView.xib
+++ b/Clutter/CLTableView.xib
@@ -17,7 +17,7 @@
                         <rect key="frame" x="1" y="0.0" width="511" height="271"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="30" rowSizeStyle="automatic" headerView="l2Z-Io-4TQ" viewBased="YES" id="1Lq-FP-J9M" customClass="CLTableView">
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="30" rowSizeStyle="automatic" headerView="l2Z-Io-4TQ" viewBased="YES" id="1Lq-FP-J9M" customClass="CLTableView">
                                 <rect key="frame" x="0.0" y="0.0" width="511" height="248"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
